--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "@clerk/nextjs": "^6.31.4",
     "@gsap/react": "^2.1.2",
     "@neondatabase/serverless": "^1.0.1",
+    "@types/nodemailer": "^7.0.1",
+    "@types/qrcode": "^1.5.5",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.542.0",
     "next": "15.5.0",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
