--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
+    "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
@@ -27,6 +28,7 @@
     "next": "15.5.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
+    "ogl": "^1.0.11",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
