--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@clerk/nextjs": "^6.31.4",
     "@gsap/react": "^2.1.2",
     "@neondatabase/serverless": "^1.0.1",
+    "@simplewebauthn/browser": "^13.1.2",
+    "@simplewebauthn/server": "^13.1.2",
     "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
     "@use-gesture/react": "^10.3.1",
